# src/main/kotlin/com/wutsi/site/endpoint/GetController.kt
@@ -2,6 +2,7 @@ package com.wutsi.site.endpoint
 
 import com.wutsi.site.`delegate`.GetDelegate
 import com.wutsi.site.dto.GetSiteResponse
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.RestController
@@ -12,5 +13,6 @@ public class GetController(
     private val `delegate`: GetDelegate
 ) {
     @GetMapping("/v1/sites/{id}")
+    @PreAuthorize(value = "hasAuthority('site')")
     public fun invoke(@PathVariable(name = "id") id: Long): GetSiteResponse = delegate.invoke(id)
 }
