# src/main/kotlin/com/wutsi/site/endpoint/SetAttributeController.kt
@@ -2,6 +2,7 @@ package com.wutsi.site.endpoint
 
 import com.wutsi.site.`delegate`.SetAttributeDelegate
 import com.wutsi.site.dto.SetAttributeRequest
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
@@ -15,6 +16,7 @@ public class SetAttributeController(
     private val `delegate`: SetAttributeDelegate
 ) {
     @PostMapping("/v1/sites/{id}/attributes/{urn}")
+    @PreAuthorize(value = "hasAuthority('site.admin')")
     public fun invoke(
         @PathVariable(name = "id") id: Long,
         @PathVariable(name = "urn") urn: String,
